Resolves tdf#156357 - Submit Show Formula to document

Change-Id: Ic893e573b2409342d61877313a3b60e83bb13690
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154984
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>